# schnetkit

./: .gitignore  README.md  pyproject.toml
schnetkit/: __init__.py  dataset.py  helpers.py  keys.py  schnet.py
schnetkit/ase/: __init__.py  calculator.py  converter.py
schnetkit/engine/: __init__.py  legacy.py  model.py  stateful.py
schnetkit/train/: __init__.py  dataset.py
tests/: Makefile
tests/integration/: model.torch  test.py
tests/unit/: tempdir.py  test_converter.py  test_dataset.py  test_schnet.py  test_stateful.py
tests/unit/dummy/: __init__.py
